DevOps/force-app/main/default/objects/Contact/fields/BPS_Navigator_Offer_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>BPS_Navigator_Offer_Outcome_Date__c</fullName>
    <label>Navigator Offer Outcome Date</label>
    <type>Date</type>
</CustomField>