DevOps/force-app/main/default/objects/Contact/fields/BPS_Navigator_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Navigator_Offer_Status__c</fullName>
    <label>Navigator Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>