DevOps/force-app/main/default/objects/Contact/fields/COI_Address__c.field-meta.xml
<CustomField>
    <fullName>COI_Address__c</fullName>
    <label>COI Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>