DevOps/force-app/main/default/objects/Contact/fields/COI_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>COI_Date_of_Birth__c</fullName>
    <label>COI Date of Birth</label>
    <type>Date</type>
</CustomField>