DevOps/force-app/main/default/objects/Contact/fields/COI_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>COI_Mobile_Phone_Number__c</fullName>
    <label>COI Mobile Phone Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>