DevOps/force-app/main/default/objects/Contact/fields/Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to mark if the contact record has a conflict of interest with a staff member</description>
    <label>Conflict of Interest</label>
    <type>Checkbox</type>
</CustomField>