DevOps/force-app/main/default/objects/Contact/fields/Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_First_Name__c</fullName>
    <description>Used to record the legal first name of a participant, if a conflict of interest exists as provided by Q&amp;C.</description>
    <label>Legal First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>