DevOps/force-app/main/default/objects/Contact/fields/Legal_Surname__c.field-meta.xml
<CustomField>
    <fullName>Legal_Surname__c</fullName>
    <description>Use this field to record the legal surname of  a participant if a conflict of interest exists as per instruction from Quality &amp; Compliance</description>
    <label>Legal Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>