DevOps/force-app/main/default/objects/Contact/fields/Online_Referral_Share_c__c.field-meta.xml
<CustomField>
    <fullName>Online_Referral_Share_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to allow an online referral to be temporarily shared to a guest user so a referral can be sent as a PDF.</description>
    <inlineHelpText>A checkbox to allow an online referral to be temporarily shared to a guest user so a referral can be sent as a PDF.</inlineHelpText>
    <label>Online Referral Share</label>
    <type>Checkbox</type>
</CustomField>