DevOps/force-app/main/default/objects/Contact/fields/SLK__c.field-meta.xml
<CustomField>
    <fullName>SLK__c</fullName>
    <formula>UPPER(
IF(Conflict_of_Interest__c,
  MID(BLANKVALUE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Legal_Surname__c, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;99999&quot;) &amp; &quot;22222&quot;, 2, 2)
  &amp; MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Legal_Surname__c, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;) &amp; &quot;22222&quot;, 5, 1)
  &amp; MID(BLANKVALUE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Legal_First_Name__c, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;99999&quot;) &amp; &quot;22222&quot;, 2, 2),
  MID(BLANKVALUE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LastName, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;99999&quot;) &amp; &quot;22222&quot;, 2, 2)
  &amp; MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LastName, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;) &amp; &quot;22222&quot;, 5, 1)
  &amp; MID(BLANKVALUE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(FirstName, &quot;&apos;&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;99999&quot;) &amp; &quot;22222&quot;, 2, 2))
&amp; IF(Birthdate_Is_Estimate__c,&quot;01&quot;,RIGHT(&quot;0&quot; &amp; TEXT(DAY(Birthdate)), 2))
&amp; IF(Birthdate_Is_Estimate__c,&quot;01&quot;,RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Birthdate)), 2))
&amp; TEXT(YEAR(Birthdate))
&amp; IF(ISPICKVAL(Sex__c, &quot;MALE&quot;),&quot;1&quot;, IF(ISPICKVAL(Sex__c, &quot;FEMALE&quot;), &quot;2&quot;, IF(ISPICKVAL(Sex__c, &quot;INTERSEX&quot;), &quot;3&quot;, &quot;9&quot;)))
)</formula>
    <label>SLK</label>
    <type>Text</type>
</CustomField>